1. adding support for the older version of androidatomic* functions which are used by some stock libraries 2. reading the name of the hardware to boot from the supplied dts, rather than using the hard-coded setting in init/init.cpp 3. letting vold daemon to handle the binding/mounting of "/storage" and its subfolders; therefore removing the relevant mount command in rootdir/init.rc

--- a/rootdir/init.rc
+++ b/rootdir/init.rc
@@ -301,7 +301,8 @@ on post-fs
     # Mount shared so changes propagate into child namespaces
     mount rootfs rootfs / shared rec
     # Mount default storage into root namespace
-    mount none /mnt/runtime/default /storage slave bind rec
+		# since vold wil try to fuse /mnt/runtime/default/emulated to /storage/emulated, the mount operation here will cause vold to be stuck in a checking loop
+    # mount none /mnt/runtime/default /storage slave bind rec
 
     # Make sure /sys/kernel/debug (if present) is labeled properly
     restorecon_recursive /sys/kernel/debug
